# search_engine_1

./: .gitignore  CMakeLists.txt  README.md
config/: config.json  request.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
resources/: file001.txt  file002.txt  file003.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  test_inverted.cpp  test_search_server.cpp
